capitalized next for language selector

--- a/langs/language_selector_page.json
+++ b/langs/language_selector_page.json
@@ -1,6 +1,6 @@
 {
     "en":{
-        "confirm":"Next",
+        "confirm":"NEXT",
         "welcome":"Welcome to MonoLibro!\nLet's complete the setup process."
     },
     "zhcn":{
